--- a/src/page/styles.css
+++ b/src/page/styles.css
@@ -20,9 +20,11 @@
   }
   
  
-  @media (max-width: 992px) {
+  @media (max-width: 700px) {
     .Col {
-      width: calc(50% - 20px); 
+      width: calc(50% - 10px); 
+      margin: 5px;
+      padding: 5px;
     }
   }
   
@@ -59,8 +61,8 @@
 
   @media (max-width: 768px) {
     th, td {
-      font-size: 14px;
-      padding: 7px;
+      font-size: 12px;
+      padding: 5px;
     }
     .Container {
         margin-top: 80px;
